13-kubernetes-3.3-network-k8s/src/manifests/deployment-cache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: cache
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          imagePullPolicy: IfNotPresent
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: cache-port
      protocol: TCP
      port: 80
